<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">

    <ImageView
        android:id="@+id/close_marker_info_dialog"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/marker_info_material_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/marker_info_material_type_title"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/marker_info_material_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@null"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/marker_info_material_type_title"
        app:layout_constraintTop_toTopOf="@+id/marker_info_material_type_title" />

    <TextView
        android:id="@+id/marker_info_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/marker_info_description_title"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/marker_info_material_type_title"
        app:layout_constraintTop_toBottomOf="@+id/marker_info_material_type_title" />

    <EditText
        android:id="@+id/marker_info_description"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/marker_info_description_title"
        app:layout_constraintStart_toEndOf="@+id/marker_info_description_title" />

    <TextView
        android:id="@+id/marker_info_sample_taken_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/marker_info_sample_taken_title"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/marker_info_material_type_title"
        app:layout_constraintTop_toBottomOf="@+id/marker_info_description_title" />

    <Switch
        android:id="@+id/marker_info_sample_taken_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/marker_info_sample_taken_title"
        app:layout_constraintStart_toEndOf="@+id/marker_info_sample_taken_title"
        app:layout_constraintTop_toTopOf="@+id/marker_info_sample_taken_title" />

    <TextView
        android:id="@+id/marker_info_sample_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/marker_info_sample_number_title"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/marker_info_sample_taken_title"
        app:layout_constraintTop_toBottomOf="@+id/marker_info_sample_taken_title" />

    <TextView
        android:id="@+id/marker_info_sample_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="0"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/marker_info_sample_number_title"
        app:layout_constraintStart_toEndOf="@+id/marker_info_sample_number_title"
        app:layout_constraintTop_toTopOf="@+id/marker_info_sample_number_title" />

</androidx.constraintlayout.widget.ConstraintLayout>